// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a credential offer screen accepting a credential 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={
      <RecordFooter>
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingBottom": 26,
              "paddingHorizontal": 25,
              "paddingVertical": 16,
            }
          }
        >
          <ConnectionAlert
            connectionID="faber.agent"
          />
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <Button
              accessibilityLabel="Global.Accept"
              buttonType={1}
              disabled={false}
              onPress={[Function]}
              testID="com.ariesbifold:id/AcceptCredentialOffer"
              title="Global.Accept"
            />
          </View>
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <Button
              accessibilityLabel="Global.Decline"
              buttonType={2}
              disabled={false}
              onPress={[Function]}
              testID="com.ariesbifold:id/DeclineCredentialOffer"
              title="Global.Decline"
            />
          </View>
        </View>
      </RecordFooter>
    }
    ListHeaderComponent={
      <RecordHeader>
        <React.Fragment>
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
              testID="com.ariesbifold:id/HeaderText"
            >
              <Text>
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <CredentialCard
            credential={
              Object {
                "_tags": Object {},
                "autoAcceptCredential": undefined,
                "connectionId": "d7e7f641-e0cc-46bc-908a-f351e2486b03",
                "createdAt": "2022-02-22T19:55:43.975Z",
                "credentialAttributes": Array [
                  Object {
                    "mime-type": undefined,
                    "name": "name",
                    "value": "Alice Smith",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "date",
                    "value": "2018-05-28",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "degree",
                    "value": "Maths",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "birthdate_dateint",
                    "value": "19980222",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "timestamp",
                    "value": "1645559742",
                  },
                ],
                "credentials": Array [],
                "errorMessage": undefined,
                "id": "0683de72-2d24-4c76-a471-424c832e4b93",
                "linkedAttachments": undefined,
                "metadata": Object {
                  "_internal/indyCredential": Object {
                    "credentialDefinitionId": undefined,
                    "schemaId": undefined,
                  },
                },
                "protocolVersion": undefined,
                "revocationNotification": undefined,
                "state": "offer-received",
                "threadId": "a3a627ab-8425-4b05-9ea7-355099f5ad6f",
              }
            }
            style={
              Object {
                "marginBottom": 16,
                "marginHorizontal": 15,
              }
            }
          />
        </React.Fragment>
      </RecordHeader>
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
              testID="com.ariesbifold:id/HeaderText"
            >
              <Text>
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
            testID="com.ariesbifold:id/ShowCredentialDetails"
          >
            <View
              accessible={true}
              style={
                Object {
                  "backgroundColor": "#15C477",
                  "borderRadius": 15,
                  "height": 375,
                  "marginBottom": 16,
                  "marginHorizontal": 15,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
                testID="com.ariesbifold:id/CredentialCard"
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "rgba(0,0,0,0)",
                        "borderTopLeftRadius": 15,
                        "borderTopRightRadius": 15,
                        "flexDirection": "row",
                        "height": 100,
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      },
                    ]
                  }
                  testID="com.ariesbifold:id/CredentialCardHeader"
                >
                  <Text
                    ellipsizeMode="tail"
                    maxFontSizeMultiplier={1}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#313132",
                          "paddingHorizontal": 5,
                          "width": "50%",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialIssuer"
                  >
                    faber.agent
                  </Text>
                  <Text
                    ellipsizeMode="tail"
                    maxFontSizeMultiplier={1}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#313132",
                          "paddingHorizontal": 5,
                          "textAlign": "right",
                          "width": "50%",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialName"
                  >
                    Credential
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                  testID="com.ariesbifold:id/CredentialCardBody"
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "borderBottomLeftRadius": 15,
                      "borderBottomRightRadius": 15,
                      "flexDirection": "row",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                  testID="com.ariesbifold:id/CredentialCardFooter"
                >
                  <Text
                    maxFontSizeMultiplier={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#313132",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialIssued"
                  >
                    CredentialDetails.Issued
                    : 
                    Feb 22, 2022
                  </Text>
                </View>
              </View>
            </View>
          </RNGestureHandlerButton>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#313132",
                "paddingBottom": 26,
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderLeftColor": "#FCBA19",
                  "borderLeftWidth": 10,
                  "flex": 1,
                  "marginVertical": 15,
                  "paddingLeft": 10,
                  "paddingVertical": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  ConnectionAlert.AddedContacts
                </Text>
                <Text
                  allowFontScaling={false}
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 30,
                      },
                      Object {
                        "color": "#FFFFFF",
                        "marginLeft": 10,
                      },
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰋽
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                    "marginVertical": 5,
                  }
                }
              >
                ConnectionAlert.NotificationBodyUpperfaber.agentConnectionAlert.NotificationBodyLower
              </Text>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 10,
                }
              }
            >
              <View
                accessibilityLabel="Global.Accept"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#42803E",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/AcceptCredentialOffer"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Accept
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 10,
                }
              }
            >
              <View
                accessibilityLabel="Global.Decline"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "#42803E",
                    "borderRadius": 4,
                    "borderWidth": 2,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/DeclineCredentialOffer"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#42803E",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Decline
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
        }
      }
    >
      <RCTScrollView
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "padding": 20,
            },
          ]
        }
      >
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontWeight": "normal",
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                ]
              }
              testID="com.ariesbifold:id/CredentialOnTheWay"
            >
              CredentialOffer.CredentialOnTheWay
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginTop": 20,
                },
                Object {
                  "alignItems": "center",
                  "justifyContent": "flex-end",
                  "minHeight": 250,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <
                height={110}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "marginTop": -30,
                      "position": "absolute",
                    },
                  ]
                }
                width={110}
              />
              <View
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "translateY": -90,
                      },
                    ],
                  }
                }
              >
                <
                  height={110}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "marginLeft": 10,
                        "position": "absolute",
                      },
                    ]
                  }
                  width={110}
                />
              </View>
              <
                height={140}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ]
                }
                width={140}
              />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          Array [
            Object {
              "margin": 20,
              "marginTop": "auto",
            },
          ]
        }
      >
        <View>
          <View
            accessibilityLabel="Loading.BackToHome"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#42803E",
                "borderRadius": 4,
                "borderWidth": 2,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/BackToHome"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Loading.BackToHome
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</RNCSafeAreaView>
`;

exports[`displays a credential offer screen declining a credential 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={
      <RecordFooter>
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingBottom": 26,
              "paddingHorizontal": 25,
              "paddingVertical": 16,
            }
          }
        >
          <ConnectionAlert
            connectionID="faber.agent"
          />
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <Button
              accessibilityLabel="Global.Accept"
              buttonType={1}
              disabled={false}
              onPress={[Function]}
              testID="com.ariesbifold:id/AcceptCredentialOffer"
              title="Global.Accept"
            />
          </View>
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <Button
              accessibilityLabel="Global.Decline"
              buttonType={2}
              disabled={false}
              onPress={[Function]}
              testID="com.ariesbifold:id/DeclineCredentialOffer"
              title="Global.Decline"
            />
          </View>
        </View>
      </RecordFooter>
    }
    ListHeaderComponent={
      <RecordHeader>
        <React.Fragment>
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
              testID="com.ariesbifold:id/HeaderText"
            >
              <Text>
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <CredentialCard
            credential={
              Object {
                "_tags": Object {},
                "autoAcceptCredential": undefined,
                "connectionId": "d7e7f641-e0cc-46bc-908a-f351e2486b03",
                "createdAt": "2022-02-22T19:55:43.975Z",
                "credentialAttributes": Array [
                  Object {
                    "mime-type": undefined,
                    "name": "name",
                    "value": "Alice Smith",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "date",
                    "value": "2018-05-28",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "degree",
                    "value": "Maths",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "birthdate_dateint",
                    "value": "19980222",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "timestamp",
                    "value": "1645559742",
                  },
                ],
                "credentials": Array [],
                "errorMessage": undefined,
                "id": "0683de72-2d24-4c76-a471-424c832e4b93",
                "linkedAttachments": undefined,
                "metadata": Object {
                  "_internal/indyCredential": Object {
                    "credentialDefinitionId": undefined,
                    "schemaId": undefined,
                  },
                },
                "protocolVersion": undefined,
                "revocationNotification": undefined,
                "state": "offer-received",
                "threadId": "a3a627ab-8425-4b05-9ea7-355099f5ad6f",
              }
            }
            style={
              Object {
                "marginBottom": 16,
                "marginHorizontal": 15,
              }
            }
          />
        </React.Fragment>
      </RecordHeader>
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
              testID="com.ariesbifold:id/HeaderText"
            >
              <Text>
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
            testID="com.ariesbifold:id/ShowCredentialDetails"
          >
            <View
              accessible={true}
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "backgroundColor": "#15C477",
                  "borderRadius": 15,
                  "height": 375,
                  "marginBottom": 16,
                  "marginHorizontal": 15,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
                testID="com.ariesbifold:id/CredentialCard"
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "rgba(0,0,0,0)",
                        "borderTopLeftRadius": 15,
                        "borderTopRightRadius": 15,
                        "flexDirection": "row",
                        "height": 100,
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      },
                    ]
                  }
                  testID="com.ariesbifold:id/CredentialCardHeader"
                >
                  <Text
                    ellipsizeMode="tail"
                    maxFontSizeMultiplier={1}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#313132",
                          "paddingHorizontal": 5,
                          "width": "50%",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialIssuer"
                  >
                    faber.agent
                  </Text>
                  <Text
                    ellipsizeMode="tail"
                    maxFontSizeMultiplier={1}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#313132",
                          "paddingHorizontal": 5,
                          "textAlign": "right",
                          "width": "50%",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialName"
                  >
                    Credential
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                  testID="com.ariesbifold:id/CredentialCardBody"
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "borderBottomLeftRadius": 15,
                      "borderBottomRightRadius": 15,
                      "flexDirection": "row",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                  testID="com.ariesbifold:id/CredentialCardFooter"
                >
                  <Text
                    maxFontSizeMultiplier={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#313132",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialIssued"
                  >
                    CredentialDetails.Issued
                    : 
                    Feb 22, 2022
                  </Text>
                </View>
              </View>
            </View>
          </RNGestureHandlerButton>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#313132",
                "paddingBottom": 26,
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderLeftColor": "#FCBA19",
                  "borderLeftWidth": 10,
                  "flex": 1,
                  "marginVertical": 15,
                  "paddingLeft": 10,
                  "paddingVertical": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  ConnectionAlert.AddedContacts
                </Text>
                <Text
                  allowFontScaling={false}
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 30,
                      },
                      Object {
                        "color": "#FFFFFF",
                        "marginLeft": 10,
                      },
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰋽
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                    "marginVertical": 5,
                  }
                }
              >
                ConnectionAlert.NotificationBodyUpperfaber.agentConnectionAlert.NotificationBodyLower
              </Text>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 10,
                }
              }
            >
              <View
                accessibilityLabel="Global.Accept"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#42803E",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/AcceptCredentialOffer"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Accept
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 10,
                }
              }
            >
              <View
                accessibilityLabel="Global.Decline"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "#42803E",
                    "borderRadius": 4,
                    "borderWidth": 2,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/DeclineCredentialOffer"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#42803E",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Decline
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
        }
      }
    >
      <RCTScrollView
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "padding": 20,
            },
          ]
        }
      >
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontWeight": "normal",
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                ]
              }
              testID="com.ariesbifold:id/CredentialOnTheWay"
            >
              CredentialOffer.CredentialOnTheWay
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginTop": 20,
                },
                Object {
                  "alignItems": "center",
                  "justifyContent": "flex-end",
                  "minHeight": 250,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <
                height={110}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "marginTop": -30,
                      "position": "absolute",
                    },
                  ]
                }
                width={110}
              />
              <View
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "translateY": -90,
                      },
                    ],
                  }
                }
              >
                <
                  height={110}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "marginLeft": 10,
                        "position": "absolute",
                      },
                    ]
                  }
                  width={110}
                />
              </View>
              <
                height={140}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ]
                }
                width={140}
              />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          Array [
            Object {
              "margin": 20,
              "marginTop": "auto",
            },
          ]
        }
      >
        <View>
          <View
            accessibilityLabel="Loading.BackToHome"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#42803E",
                "borderRadius": 4,
                "borderWidth": 2,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/BackToHome"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Loading.BackToHome
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</RNCSafeAreaView>
`;

exports[`displays a credential offer screen renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Array [
      "bottom",
      "left",
      "right",
    ]
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView
    ListFooterComponent={
      <RecordFooter>
        <View
          style={
            Object {
              "backgroundColor": "#313132",
              "paddingBottom": 26,
              "paddingHorizontal": 25,
              "paddingVertical": 16,
            }
          }
        >
          <ConnectionAlert
            connectionID="faber.agent"
          />
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <Button
              accessibilityLabel="Global.Accept"
              buttonType={1}
              disabled={false}
              onPress={[Function]}
              testID="com.ariesbifold:id/AcceptCredentialOffer"
              title="Global.Accept"
            />
          </View>
          <View
            style={
              Object {
                "paddingTop": 10,
              }
            }
          >
            <Button
              accessibilityLabel="Global.Decline"
              buttonType={2}
              disabled={false}
              onPress={[Function]}
              testID="com.ariesbifold:id/DeclineCredentialOffer"
              title="Global.Decline"
            />
          </View>
        </View>
      </RecordFooter>
    }
    ListHeaderComponent={
      <RecordHeader>
        <React.Fragment>
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
              testID="com.ariesbifold:id/HeaderText"
            >
              <Text>
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <CredentialCard
            credential={
              Object {
                "_tags": Object {},
                "autoAcceptCredential": undefined,
                "connectionId": "d7e7f641-e0cc-46bc-908a-f351e2486b03",
                "createdAt": "2022-02-22T19:55:43.975Z",
                "credentialAttributes": Array [
                  Object {
                    "mime-type": undefined,
                    "name": "name",
                    "value": "Alice Smith",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "date",
                    "value": "2018-05-28",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "degree",
                    "value": "Maths",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "birthdate_dateint",
                    "value": "19980222",
                  },
                  Object {
                    "mime-type": undefined,
                    "name": "timestamp",
                    "value": "1645559742",
                  },
                ],
                "credentials": Array [],
                "errorMessage": undefined,
                "id": "0683de72-2d24-4c76-a471-424c832e4b93",
                "linkedAttachments": undefined,
                "metadata": Object {
                  "_internal/indyCredential": Object {
                    "credentialDefinitionId": undefined,
                    "schemaId": undefined,
                  },
                },
                "protocolVersion": undefined,
                "revocationNotification": undefined,
                "state": "offer-received",
                "threadId": "a3a627ab-8425-4b05-9ea7-355099f5ad6f",
              }
            }
            style={
              Object {
                "marginBottom": 16,
                "marginHorizontal": 15,
              }
            }
          />
        </React.Fragment>
      </RecordHeader>
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
            }
          }
        >
          <View
            style={
              Object {
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "flexShrink": 1,
                  "fontSize": 18,
                  "fontWeight": "normal",
                }
              }
              testID="com.ariesbifold:id/HeaderText"
            >
              <Text>
                faber.agent
              </Text>
               
              CredentialOffer.IsOfferingYouACredential
            </Text>
          </View>
          <RNGestureHandlerButton
            collapsable={false}
            onGestureEvent={[Function]}
            onGestureHandlerEvent={[Function]}
            onGestureHandlerStateChange={[Function]}
            onHandlerStateChange={[Function]}
            rippleColor={0}
            testID="com.ariesbifold:id/ShowCredentialDetails"
          >
            <View
              accessible={true}
              collapsable={false}
              nativeID="animatedComponent"
              style={
                Object {
                  "backgroundColor": "#15C477",
                  "borderRadius": 15,
                  "height": 375,
                  "marginBottom": 16,
                  "marginHorizontal": 15,
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
                testID="com.ariesbifold:id/CredentialCard"
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "rgba(0,0,0,0)",
                        "borderTopLeftRadius": 15,
                        "borderTopRightRadius": 15,
                        "flexDirection": "row",
                        "height": 100,
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      },
                    ]
                  }
                  testID="com.ariesbifold:id/CredentialCardHeader"
                >
                  <Text
                    ellipsizeMode="tail"
                    maxFontSizeMultiplier={1}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#313132",
                          "paddingHorizontal": 5,
                          "width": "50%",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialIssuer"
                  >
                    faber.agent
                  </Text>
                  <Text
                    ellipsizeMode="tail"
                    maxFontSizeMultiplier={1}
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "bold",
                        },
                        Object {
                          "color": "#313132",
                          "paddingHorizontal": 5,
                          "textAlign": "right",
                          "width": "50%",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialName"
                  >
                    Credential
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexGrow": 1,
                    }
                  }
                  testID="com.ariesbifold:id/CredentialCardBody"
                />
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "borderBottomLeftRadius": 15,
                      "borderBottomRightRadius": 15,
                      "flexDirection": "row",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                  testID="com.ariesbifold:id/CredentialCardFooter"
                >
                  <Text
                    maxFontSizeMultiplier={1}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 14,
                          "fontWeight": "normal",
                        },
                        Object {
                          "color": "#313132",
                        },
                      ]
                    }
                    testID="com.ariesbifold:id/CredentialIssued"
                  >
                    CredentialDetails.Issued
                    : 
                    Feb 22, 2022
                  </Text>
                </View>
              </View>
            </View>
          </RNGestureHandlerButton>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#313132",
                "paddingBottom": 26,
                "paddingHorizontal": 25,
                "paddingVertical": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "borderLeftColor": "#FCBA19",
                  "borderLeftWidth": 10,
                  "flex": 1,
                  "marginVertical": 15,
                  "paddingLeft": 10,
                  "paddingVertical": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 20,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  ConnectionAlert.AddedContacts
                </Text>
                <Text
                  allowFontScaling={false}
                  onPress={[Function]}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 30,
                      },
                      Object {
                        "color": "#FFFFFF",
                        "marginLeft": 10,
                      },
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰋽
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                    "marginVertical": 5,
                  }
                }
              >
                ConnectionAlert.NotificationBodyUpperfaber.agentConnectionAlert.NotificationBodyLower
              </Text>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 10,
                }
              }
            >
              <View
                accessibilityLabel="Global.Accept"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "#42803E",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/AcceptCredentialOffer"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Accept
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "paddingTop": 10,
                }
              }
            >
              <View
                accessibilityLabel="Global.Decline"
                accessibilityState={
                  Object {
                    "disabled": false,
                  }
                }
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "#42803E",
                    "borderRadius": 4,
                    "borderWidth": 2,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/DeclineCredentialOffer"
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#42803E",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                    ]
                  }
                >
                  Global.Decline
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Modal
    animationType="none"
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <RNCSafeAreaView
      style={
        Object {
          "backgroundColor": "#000000",
        }
      }
    >
      <RCTScrollView
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "height": "100%",
              "padding": 20,
            },
          ]
        }
      >
        <View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 26,
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontWeight": "normal",
                    "marginTop": 30,
                    "textAlign": "center",
                  },
                ]
              }
              testID="com.ariesbifold:id/CredentialOnTheWay"
            >
              CredentialOffer.CredentialOnTheWay
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "marginTop": 20,
                },
                Object {
                  "alignItems": "center",
                  "justifyContent": "flex-end",
                  "minHeight": 250,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "flexDirection": "column",
                  },
                ]
              }
            >
              <
                height={110}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "marginTop": -30,
                      "position": "absolute",
                    },
                  ]
                }
                width={110}
              />
              <View
                style={
                  Object {
                    "opacity": 0,
                    "transform": Array [
                      Object {
                        "translateY": -90,
                      },
                    ],
                  }
                }
              >
                <
                  height={110}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "marginLeft": 10,
                        "position": "absolute",
                      },
                    ]
                  }
                  width={110}
                />
              </View>
              <
                height={140}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                  ]
                }
                width={140}
              />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          Array [
            Object {
              "margin": 20,
              "marginTop": "auto",
            },
          ]
        }
      >
        <View>
          <View
            accessibilityLabel="Loading.BackToHome"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#42803E",
                "borderRadius": 4,
                "borderWidth": 2,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/BackToHome"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Loading.BackToHome
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </Modal>
</RNCSafeAreaView>
`;
